update backend files from new swagger file
